@@ -1,20 +1,63 @@
-FROM eclipse-temurin:21-jdk-alpine AS build
+# First stage, build the custom JRE
+FROM eclipse-temurin:21-jdk-alpine AS jre-builder
 
-RUN apk add --no-cache maven
+RUN mkdir /opt/app
+COPY src /opt/app/src
+COPY pom.xml /opt/app
 
-COPY src /app/src
-COPY pom.xml /app
+WORKDIR /opt/app
 
-WORKDIR /app
+ENV MAVEN_VERSION 3.5.4
+ENV MAVEN_HOME /usr/lib/mvn
+ENV PATH $MAVEN_HOME/bin:$PATH
+
+RUN apk update && \
+    apk add --no-cache tar binutils maven
+
 RUN mvn clean package -DskipTests -U \
     && rm -rf /root/.m2 \
-    && rm -rf /app/src
+    && rm -rf /opt/app/src
 
-# Run stage
-FROM eclipse-temurin:21-jre-alpine
+RUN jar xvf target/QualityLabPro-0.7.jar
+RUN jdeps --ignore-missing-deps -q  \
+    --recursive  \
+    --multi-release 21  \
+    --print-module-deps  \
+    --class-path 'BOOT-INF/lib/*'  \
+    target/QualityLabPro-0.7.jar > modules.txt
 
-WORKDIR /usr/src/app
-COPY --from=build /app/target/QualityLabPro-0.7.jar ./app.jar
+# Build small JRE image
+RUN $JAVA_HOME/bin/jlink \
+         --verbose \
+         --add-modules $(cat modules.txt) \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /optimized-jdk-21
+
+# Second stage, Use the custom JRE and build the app image
+FROM alpine:latest
+ENV JAVA_HOME=/opt/jdk/jdk-21
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+# copy JRE from the base image
+COPY --from=jre-builder /optimized-jdk-21 $JAVA_HOME
+
+# Add app user
+ARG APPLICATION_USER=spring
+
+# Create a user to run the application, don't run as root
+RUN addgroup --system $APPLICATION_USER &&  adduser --system $APPLICATION_USER --ingroup $APPLICATION_USER
+
+# Create the application directory
+RUN mkdir /app && chown -R $APPLICATION_USER /app
+
+COPY --chown=$APPLICATION_USER:$APPLICATION_USER --from=jre-builder /opt/app/target/QualityLabPro-0.7.jar /app/app.jar
+
+WORKDIR /app
+
+USER $APPLICATION_USER
 
 ENV SPRING_PROFILES_ACTIVE=prod \
     SERVER_PORT=8080
